# flatbuffers-rust-vector-of-unions-example

./: Cargo.toml  LICENSE
src/: main.rs  my_table.fbs  my_table_generated.rs
