[package]
name = "rust-vector-of-unions"
version = "0.1.0"
authors = ["kajdam <69102864+kajdam@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "0.8.3"

[patch.crates-io]
flatbuffers = { git = 'https://github.com/kajdam/flatbuffers', branch = 'rust-vector-of-unions' }
